assets/css/main.css
:root {
    --primary-color: #F6F6F6;
    --secondary-color: #BD2727;
    --background-color: #1E1E1E;
    --button-background-color: #FFFFFFCC;
    --secondary-color-hover: #d64d4d;
}

*, :after, :before {
    box-sizing: border-box;
    border: 0 solid;
}

body {
    font-family: "Oswald", sans-serif;
    height: 100%;
    margin: 0;
    overflow: hidden !important;
    background: var(--background-color);
    color: var(--primary-color);
}

@media (max-device-width: 950px) {
    body {
        overflow: auto !important;
        -webkit-overflow-scrolling: touch !important;
    }
}

.mobile-menu {
    width: 100vw;
    height: 100%;

    & > .mobile-menu-container {
        display: flex;
        flex-direction: column;
        gap: 2rem;
        align-items: center;
        height: 100%;
        width: 100%;
        background: var(--background-color);
        color: var(--primary-color);
        opacity: 0.9;
        position: absolute;
        z-index: 100;
        top: 0;
        left: 0;
        transition: all 0.4s;
        transform: translateX(-100%);
        overflow: hidden;

        &.active {
            transform: translateX(0);
        }

        & > .mobile-menu-container-header {
            width: 100%;
            text-align: right;
            padding: 1.5rem 2.5rem;
            height: 25%;
            font-size: 1.5rem;
        }

        & > a {
            color: var(--primary-color);
            opacity: 1;
            text-decoration: none;
            font-size: 1rem;
            padding: 0.3rem 1.25rem;
            border-radius: 9999px;
            font-weight: 600;
            transition: all 0.3s;
            cursor: pointer;

            &:hover {
                background: var(--button-background-color);
                color: var(--background-color);
            }
        }
    }
}

.header {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    width: 100%;
    height: 64px;
    z-index: 70;
    top: 0;
    position: fixed;

    & > .nav-container {
        display: flex;
        justify-content: space-between;
        align-items: center;
        height: 100%;
        margin-left: auto;
        margin-right: auto;
        z-index: 10;
        position: relative;

        & a {
            color: var(--primary-color);
            text-decoration: none;
            font-size: 1rem;
            padding: 0.3rem 1.25rem;
            border-radius: 9999px;
            font-weight: 600;
            transition: all 0.3s;
            cursor: pointer;

            &:hover {
                background: var(--button-background-color);
                color: var(--background-color);
            }
        }

        & > .nav-logo > a {
            border-radius: 5px;
            background: var(--secondary-color);
            padding: 0.25rem 1rem;

            &:hover {
                background: var(--secondary-color-hover);
            }
        }
    }
}

@media (max-device-width: 950px) {
    .nav-menu {
        display: none;
    }
    .nav-language {
        display: none;
    }

    .cards-container {
        flex-direction: column !important;

        & > card {
            height: 50% !important;
        }

        & h1 {
            transform: translateY(0) !important;
            width: 50% !important;
        }
    }
}

.cards-container {
    display: flex;
    flex-direction: row;
    padding: 0.25rem;
    width: 100vw;
    height: 100%;

    & > a {
        height: 100%;
        width: 100%;
        background: #232323;
        border: 4px solid var(--background-color);
        overflow: hidden;
        cursor: pointer;
        position: relative;

        & > .card {
            width: 100%;
            height: 100%;
            position: relative;
            transition-duration: 1s;
            overflow: hidden;
            cursor: pointer;

            & > img {
                position: absolute;
                height: 100%;
                width: 100%;
                inset: 0;
                color: transparent;
                opacity: .6;
                object-fit: cover;
                overflow: hidden;
                max-width: none;
                transform: translateY(0);
                transition-duration: .5s;
            }
        }

        &:hover {
            & > .card > img {
                opacity: 1;
            }

            @media (min-width: 950px) {
                & > .card > img {
                    transform: translateY(-6vh);
                }
            }

            & > h1 {
                transform: translateY(0);
            }
        }

        @keyframes shine {
            to {
                left: 200%
            }
        }
        & > .card-shine:after {
            content: "";
            position: absolute;
            top: 0;
            left: -200%;
            width: 200%;
            height: 100%;
            transform: skewX(-20deg);
            animation: shine 1.9s ease infinite;
            background-image: linear-gradient(90deg, transparent, hsla(0, 0%, 100%, .12), transparent);
        }

        & > h1 {
            padding: 0.5vw 1vw;
            gap: .4vw;
            left: -2px;
            right: -2px;
            transition-timing-function: cubic-bezier(0,0,.2,1);
            transition-duration: .5s;
            transition-property: transform;
            display: flex;
            flex-direction: row;
            bottom: 0;
            position: absolute;
            margin: 0;
            cursor: pointer;
            transform: translateY(calc(100% - 8px));
            background: var(--background-color);
        }
    }
}

